--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "themes/toha"]
 	path = themes/toha
 	url = https://github.com/hugo-toha/toha.git
+[submodule "themes/themes/toha"]
+	path = themes/themes/toha
+	url = https://github.com/hugo-toha/toha.git
+[submodule "toha"]
+	path = toha
+	url = https://github.com/hugo-toha/toha.git
