--- a/config.yaml
+++ b/config.yaml
@@ -39,7 +39,7 @@ enableEmoji: true
 # Site parameters
 params:
   # Background image of the landing page
-  background: /images/site/santo.jpg
+  background: /images/site/background.jpg
 
   # GitHub repo URL and branch of your site
   #gitRepo: https://github.com/taedi90/taedi90.github.io
