--- a/config.yaml
+++ b/config.yaml
@@ -22,6 +22,16 @@ outputs:
   - RSS
   - JSON
 
+# Allow raw html in markdown file
+markup:
+  goldmark:
+    renderer:
+      unsafe: true
+  tableOfContents:
+    startLevel: 2
+    endLevel: 6
+    ordered: false
+
 # Enable global emoji support
 enableEmoji: true
 
@@ -42,12 +52,6 @@ params:
 
   # Show tags under the post title
   enableTags: true
-
-  markup:
-  tableOfContents:
-    startLevel: 2
-    endLevel: 6
-    ordered: true
 
   # Provide footer configuration.
   footer:
