--- a/config.yaml
+++ b/config.yaml
@@ -36,7 +36,7 @@ markup:
 enableEmoji: true
 
 # Enable Google Analytics
-googleAnalytics: 2802576574
+googleAnalytics: G-52CHZ4CKK9
 
 
 # Site parameters
