--- a/config.yaml
+++ b/config.yaml
@@ -48,6 +48,14 @@ params:
   #gitRepo: https://github.com/taedi90/taedi90.github.io
   #gitBranch: main
 
+  # Provide logos for your site. The inverted logo will be used in the initial
+  # transparent navbar and the main logo will be used in the non-transparent navbar.
+  # It will default to the theme logos if not provided.
+  logo:
+    main: /images/site/main-logo.svg
+    inverted: /images/site/inverted-logo.svg
+    favicon: /images/site/favicon.svg
+
   # specify whether you want to write some blog posts or not
   enableBlogPost: true
 
