--- a/data/ko/site.yaml
+++ b/data/ko/site.yaml
@@ -23,5 +23,5 @@ openGraph:
   title: Taedi's Log
   type: website
   description: 비전공자의 코딩 메모장!
-  image: images/author/avator.png
+  image: images/site/main-logo.svg
   url: https://log.taedi.net/
