fix font size & background

--- a/config.yaml
+++ b/config.yaml
@@ -43,7 +43,7 @@ googleAnalytics: G-52CHZ4CKK9
 # Site parameters
 params:
   # Background image of the landing page
-  background: /images/site/background.jpg
+  background: /images/site/fireplace.jpg
 
   # GitHub repo URL and branch of your site
   #gitRepo: https://github.com/taedi90/taedi90.github.io
