--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/toha"]
 	path = themes/toha
 	url = https://github.com/hugo-toha/toha.git
+[submodule "editor/notion2toha"]
+	path = editor/notion2toha
+	url = https://github.com/taedi90/notion2toha.git
