--- a/data/ko/site.yaml
+++ b/data/ko/site.yaml
@@ -24,4 +24,4 @@ openGraph:
   type: website
   description: 비전공자의 코딩 메모장!
   image: images/site/main-logo.svg
-  url: https://log.taedi.net/
+  url: https://taedi90.github.io/
